# Subnatica2-Inventory-and-Player-Editor

./: CMakeLists.txt  README.md  build.bat
cmake/: ProjectVersion.cmake  SignExecutable.cmake
resources/: app.manifest  app.rc  version.rc.in
scripts/: create-signing-cert.ps1  export-github-source.ps1  sign-exe.ps1  verify-single-exe.ps1
src/: main.cpp
src/app/: Application.cpp  Application.h  SplashScreen.cpp  SplashScreen.h  Window.cpp  Window.h
src/config/: IniConfig.cpp  IniConfig.h
src/functions/: FunctionRegistry.cpp  FunctionRegistry.h  TrainerFunction.h
src/gfx/: OceanBackground.cpp  OceanBackground.h  Renderer.cpp  Renderer.h
src/themes/: Theme.h  ThemeManager.cpp  ThemeManager.h
src/ui/: SmoothScroll.h  TrainerUI.cpp  TrainerUI.h  Widgets.cpp  Widgets.h  WindowChrome.cpp  WindowChrome.h
src/util/: Hotkeys.cpp  Hotkeys.h  KeyPoll.cpp  KeyPoll.h  LogBuffer.cpp  LogBuffer.h  Time.h
